src/test/ui/existential_types/no_inferrable_concrete_type.stderr
error[E0391]: cycle detected when normalizing `ParamEnvAnd { param_env: ParamEnv { caller_bounds: [], reveal: All }, value: Foo }`
  --> $DIR/no_inferrable_concrete_type.rs:16:1
   |
LL | existential type Foo: Copy; //~ cycle detected
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which again requires normalizing `ParamEnvAnd { param_env: ParamEnv { caller_bounds: [], reveal: All }, value: Foo }`, completing the cycle

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
